# attack-surface-mapper

./: .gitignore  Docker_HOWTO.md  Dockerfile  Makefile  Quickstart.md  README.md  attack-surface-mapper.py  attack_surface_mapper.py  create_scope.py  external_tools.json  one-liner-scope-creation.md  pre-commit-hook.sh  pyproject.toml  requirements.txt  scope_utils.py  signed_scope_howto.md
.github/workflows/: ci.yml
attack_surface_mapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: patch_docker_python_tools.py  patch_tool_flags_support.py
tests/: test_attack_surface_mapper.py
