[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attack-surface-mapper"
version = "3.4.0"
description = "Signed-scope recon orchestrator"
requires-python = ">=3.10"
dependencies = [
  "structlog==25.4.0",
  "opentelemetry-api==1.40.0",
  "opentelemetry-sdk==1.40.0",
  "pydantic==2.11.3",
  "defusedxml==0.7.1",
]

[project.scripts]
attack-surface-mapper = "attack_surface_mapper:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.11",
  "ruff>=0.6",
]

# ------------------------------------------------------------------
# Tool configuration
# ------------------------------------------------------------------

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
  "structlog.*",
  "opentelemetry.*",
  "defusedxml.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
# S603/S607: subprocess calls are intentional (recon tool execution)
# S108: /tmp usage is acceptable in test helpers
ignore = ["S603", "S607", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv"
